--- a/artikulua.tex
+++ b/artikulua.tex
@@ -701,13 +701,15 @@ To finish this section, Table \ref{tab:taldeak} offers an overview of the main s
 
 \section{Conclusion and Future Work}\label{sec:conclusion}
 
-We have shown how to develop different systems that allows us an approximation to the reality of certain communities of Twitter, in this case to the community of Basque speakers. The first step has allowed the collection of large amounts of information based on the target community. The second step has allowed the segmentation of the extracted sample by life stage, demonstrating that it is possible to segment by demographic features. In third and last place, we can show the topics of conversation and the relationships of young and adults, showing the reality of two different groups. In general terms, it is proven that the social sciences and computer science make a good combination thanks to the application of language processing techniques,, demonstrating that demographic features can be inferred and that social interactions can be discovered.
+This paper presents an approach to social research of speakers of a less resource language based on applying Natural Language Processing and topic detection techniques to a large dataset of tweets written in Basque. The collected dataset consists of more than 6M tweets from almost 8K users. This demonstrates that Twitter is a valuable source of spontaneously generated textual data for research on language use and for the discovering of latent social interactions.
 
-It can be said that a new data source has been opened thanks to the possibility of extracting information from Twitter. This extraction technique has allowed to achieve large amounts of data at a very low cost. It would be interesting to extend the extraction of data to other social networks such as Instagram and Facebook, which due to their closure make it very difficult to extract their data. However, this new source of data also has its limits in research, since it leaves out, at least for now, a part of the population. Even so, it must be admitted that a successful system has been developed, getting more than 10 million tweets in Basque from almost 8,000 different users, a considerable amount of data dealing with a minority language. An important part of this research is based on the segmentation between young people and adults, since the prediction of demographic characteristics is an important tool for social research. The distinction between youth and adults is not based on age, it has been done according to the formality of the text, since age-based labeling was too expensive. Therefore, given the difficulties of age labeling, it is decided to use a methodological shortcut, if the concentration of informal text is high, the author will be considered as young. For the future, it would be appropriate to carry out the classification by age, investing more resources but making a more real approach. Thanks to the document classifier of IXA pipes, good results have been achieved, demonstrating that it is a robust system that works well with small training corpus, making it possible for small researchers to do their job well.
+Furthermore, this paper presents a comparison of five different approaches to classify Twitter users by life stage, namely, whether they are adult or young people. As age-related information was not present in the collected data, we decided to focus instead on classifying tweets by writing style, assuming that most of the informal tweets are written by young people and \emph{vice versa}. In order to develop our classifiers, we manually annotated 1000 tweets with the labels \emph{formal} and \emph{informal}, and experimented with modern feature-based and deep learning techniques for text classification based on vector-based word representations (word embeddings), clustering features and neural networks. We believe that we provide one of the most competitive approaches for age (or life stage) detection. In our view, our approach is robust enough to be usable across tasks, languages and datasets.
 
-Once the entire sample has been segmented between young people and adults, it has been possible to show the topics of which they speak and how do they interact. First of all, what Basque users speak about has been shown. Most young people use this social network to communicate with nearby people about everyday events. On the other hand, among adults it would function more as an instrument of expression, especially when it comes to publishing topics that are political or current in nature. Despite the different themes of adults and young people, this social network is used mainly as a means of communication and information exchange. Second, we have been able to identify the different subgroups within the same community, using the interactions or retweets. In addition, it is worth mentioning that users related to the media play an important role, confirming the informative nature of Twitter. Basque users use Basque, especially to talk about events or topics related to them. It can be said that the communities are easily identifiable and can be related to the context of the Basque Country, showing that the approach is useful. It can be concluded by saying that Basque is used mainly to talk about the subjects of the Basque people.
+Using the best classifier we automatically tagged the personal tweets contained in the 6M corpus, classifying a user's timeline as young if more than 45\% of the tweets were classified as informal, and as adult otherwise. This allowed us to classify almost 8K Basque Twitter users by their life stage, allowing to obtain meaningful insights with respect to the most important topics per life stage. Moreover, by using the information provided by the users' retweets, It also facilitated the uncovering of the most important relationships formed within the social network, helping to understand better the differences in social behaviour between young and adult Basque users of Twitter.
 
-Thanks to this work, it has been possible to discover how Basque language is adapting to the context of the 21st century, demonstrating that it is present in social networks, with more than 6 million tweets in Basque and almost 8,000 different users crawled. Being present in new technologies, such as social networks, means that our language is able to adapt to new challenges, thanks to the creativity of the Basques to introduce them into these spaces. As the result of this research, it can be said that Basque speakers use Basque language to speak about their own issues, showing that Basque language is capable of adapting to new contexts, always being linked to the everyday reality of the community of speakers. This shows, in this globalized and constantly connected world, that the Basques have a special ability to find their place and settle down.
+More specifically, it was found out that most Basque young users use Twitter to communicate with people close to them about everyday aspects of life, whereas for adults the most important topics were those related with politics and social issues. Furthermore, we were able to characterize quite clearly the different communities that get implicitly formed within the network. Thus, although there are certain similarities, one clear difference was the fact that young people form communities around sport celebrities (footballers and so on) and media.
+
+To finish, we publicly distribute the data collected as well as the best classifiers developed to help promoting both sociological and linguistic processing research in a less resource highly-inflected language such as Basque and about Basque speakers. We believe that the work presented in this paper is applicable to other less resource languages around the world.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \vspace{6pt}
