--- a/artikulua.tex
+++ b/artikulua.tex
@@ -522,11 +522,11 @@ The results of applying LDA are displayed using LDAvis \cite{sievert2014ldavis},
                    & Basque language, language, Basque speaker, Basque, learn & \\ \hline
                    15 Sports & talde, real, partida, irabazi, jokatu & 3.8 \\
                    & team, real, match, win, play & \\ \hline
-                   16 Gipuzkoa & tolosa, andoain, hernani, ordizi, beasain & 3.7  \\ \hline
+                   16 Gipuzkoa (Province) & tolosa, andoain, hernani, ordizi, beasain & 3.7  \\ & (Cities in the province of Gipuzkoa) & \\ \hline
                    17 Media in Basque & @berria, @euskalirratia, @argia, @zebrabidea, @iehkohitza & 3.5  \\ \hline
-                   18 Donostia & donostia, @donostiakoudala, ezagutu, gipuzkoa & 3.5  \\ \hline
-                   19 Nafarroa & nafarroa, baztan, altsasu, irunerri, irun & 2.7  \\ \hline
-                   20 Bizkaia & larrabetzu, lekeitio, durango, bermeo, arrasate & 2.6 \\ \hline
+                   18 Donostia (City) & donostia, @donostiakoudala, ezagutu, gipuzkoa & 3.5 \\ & Donostia, City Hall of Donostia, meet, Gipuzkoa & \\ \hline
+                   19 Nafarroa (Province) & nafarroa, baztan, altsasu, irunerri, irun & 2.7  \\ & (Cities in the province of Navarre) & \\ \hline
+                   20 Bizkaia (Province) & larrabetzu, lekeitio, durango, bermeo, arrasate & 2.6 \\ & (Cities in the province of Bizkaia) & \\ \hline
   \end{tabular}
   \caption{Topics of adult users. Whenever necessary, English translation is provided below each row of representative words.}
   \label{tab:adult-tp}
@@ -558,7 +558,7 @@ The results of applying LDA are displayed using LDAvis \cite{sievert2014ldavis},
                    & do, mine, that, seem, read & \\ \hline
                    10 Basque prisoners & herri, euskal, etxe, preso, gazte & 6.4 \\
                    & people, Basque, house, prisoner, youth & \\ \hline
-                   11 Athletic CB & aupa, athletic, @athletic, san mames, bilbo  & 3.3 \\ \hline
+                   11 Athletic CB (football team) & aupa, athletic, @athletic, san mames, bilbo  & 3.3 \\ \hline
                    12 Rowing & sailkapen, jardunaldi, maila, txapelketa, estropada & 2.7 \\
                    & classification, event, level, championship, regatta & \\ \hline
   \end{tabular}
