--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,22 @@
+@article{leivada2019eliciting,
+  title={Eliciting big data from small, young, or non-standard languages: 10 experimental challenges},
+  author={Leivada, Evelina and D'Alessandro, Roberta and Grohmann, Kleanthes K},
+  journal={Frontiers in psychology},
+  volume={10},
+  pages={313},
+  year={2019},
+  publisher={Frontiers}
+}
+
+@incollection{cunliffe2019minority,
+  title={Minority Languages and Social Media},
+  author={Cunliffe, Daniel},
+  booktitle={The Palgrave Handbook of Minority Languages and Communities},
+  pages={451--480},
+  year={2019},
+  publisher={Springer}
+}
+
 @book{bauman2013liquid,
   title={Liquid modernity},
   author={Bauman, Zygmunt},
